image cropper works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">IMAGE CROPPER</string>
+    <string name="comImageCroppers">com.sunayanpradhan.imagecropper"+".provider</string>
+    <string name="select_image">SELECT IMAGE</string>
 </resources>
